# QARA

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  architect-prompt.md  docker-compose.yml  phase-1-plan.md
.github/: PULL_REQUEST_TEMPLATE.md
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_create_tenants.py  002_create_users.py  003_create_projects.py  004_create_bug_reports.py  005_create_bug_captures.py  006_create_integrations.py  007_create_audit_log.py  008_create_bug_embeddings.py
api/app/: config.py  database.py  dependencies.py  main.py  seed.py
api/app/integrations/: __init__.py  jira_client.py  slack_client.py
api/app/llm/: __init__.py  client.py  embeddings.py  prompts.py
api/app/middleware/: __init__.py  audit.py  request_id.py
api/app/models/: __init__.py  audit_log.py  bug_capture.py  bug_report.py  integration.py  project.py  tenant.py  user.py
api/app/routes/: auth.py  bugs.py  captures.py  health.py  integrations.py  projects.py
api/app/schemas/: __init__.py  auth.py  bug.py  capture.py  common.py  integration.py  project.py
api/app/services/: __init__.py  auth_service.py  bug_service.py  capture_service.py  integration_service.py  project_service.py  storage_service.py  triage_service.py
api/app/tasks/: __init__.py  integration_task.py  settings.py  triage_task.py  worker.py
api/tests/: conftest.py
cli/: package-lock.json  package.json
docs/: ai-pipeline.md  api.md  architecture.md  cli.md  contributing.md  data-model.md  deployment.md  erd.md  (+3 more)
(+76 files in other folders)
