[project]
name = "qara-api"
version = "0.1.0"
description = "QARA Phase 1 Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.18",
    "boto3>=1.35.0",
    "httpx>=0.28.0",
    "arq>=0.26.0",
    "redis>=5.2.0",
    "scikit-learn>=1.6.0",
    "numpy>=2.0.0",
    "greenlet>=3.1.0",
    "email-validator>=2.2.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
